examples/type_system/failing/147_constructor_pattern_arity_none_too_many.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 2 errors • examples/type_system/failing/147_constructor_pattern_arity_none_too_many.flx
// error[E015]: Non-Exhaustive Match
//
// Match is not exhaustive: 1 missing pattern.
//
//   examples/type_system/failing/147_constructor_pattern_arity_none_too_many.flx:48:14
//    |
// 48 |     let _y = match x {
//    |              ^^^^^^^^^
// 49 |         NoneI(v) -> v,
//    | ^^^^^^^^^^^^^^^^^^^^^^
// 50 |         SomeI(n) -> n,
//    | ^^^^^^^^^^^^^^^^^^^^^^
// 51 |     }
//    | ^^^^^
//
// Hint:
//   Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
//
//
// error[E085]: Constructor Pattern Arity Mismatch
//
// Constructor pattern `NoneI` expects 0 argument(s) but got 1.
//
//   examples/type_system/failing/147_constructor_pattern_arity_none_too_many.flx:49:9
//    |
// 49 |         NoneI(v) -> v,
//    |         ^^^^^^^^
//
// Hint:
//   Check the constructor's declared pattern field count.
//
// Found 2 errors.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E015
// expect-error: E085

// E085: constructor-pattern arity mismatch (expects 0 fields, pattern provides 1).

type MaybeI = SomeI(Int) | NoneI

fn main() {
    let x = NoneI
    let _y = match x {
        NoneI(v) -> v,
        SomeI(n) -> n,
    }
}
